deployments/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-platform
  labels:
    app.kubernetes.io/part-of: payment-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
